added get all entries for a account api in gin and grpc
