# doc/swagger/simple_bank.swagger.json
@@ -1,7 +1,7 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "rpc_users.proto",
+    "title": "rpc_entries.proto",
     "version": "version not set"
   },
   "tags": [
@@ -16,6 +16,45 @@
     "application/json"
   ],
   "paths": {
+    "/api/v1/accounts/{accountId}/entries": {
+      "patch": {
+        "operationId": "SimpleBank_GetAllEntryForAccountID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbEntryListResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "accountId",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/SimpleBankGetAllEntryForAccountIDBody"
+            }
+          }
+        ],
+        "tags": [
+          "SimpleBank"
+        ]
+      }
+    },
     "/api/v1/users": {
       "get": {
         "operationId": "SimpleBank_GetAllUser",
@@ -253,6 +292,10 @@
     }
   },
   "definitions": {
+    "SimpleBankGetAllEntryForAccountIDBody": {
+      "type": "object",
+      "title": "list all entries by account id schema"
+    },
     "SimpleBankUpdateUserBody": {
       "type": "object",
       "properties": {
@@ -291,6 +334,39 @@
       "properties": {
         "user": {
           "$ref": "#/definitions/pbUser"
+        }
+      }
+    },
+    "pbEntry": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "accountId": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "amount": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "createdAt": {
+          "type": "string",
+          "format": "date-time"
+        }
+      }
+    },
+    "pbEntryListResponse": {
+      "type": "object",
+      "properties": {
+        "entries": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/pbEntry"
+          }
         }
       }
     },
